--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -13,14 +13,15 @@
   <body>
     <main>
       <div class="grid">
-        <div class="turn yellow" data-id="turn">
-          <i class="fa-solid fa-x"></i>
-          <p>Player 1, you're up!</p>
+        <!-- Turn indicator -->
+        <div class="turn" data-id="turn">
+          <i class="fa-solid fa-x turquoise"></i>
+          <p class="turquoise">Player 1, you're up!</p>
         </div>
 
         <!-- Dropdown menu -->
         <div class="menu" data-id="menu">
-          <button class="menu-btn">
+          <button class="menu-btn" data-id="menu-btn">
             Actions
             <i class="fa-solid fa-chevron-down"></i>
           </button>
@@ -45,15 +46,15 @@
         <!-- Scoreboard -->
         <div class="score shadow" style="background-color: var(--turquoise)">
           <p>Player 1</p>
-          <span>0 Wins</span>
+          <span data-id="p1-wins">0 Wins</span>
         </div>
         <div class="score shadow" style="background-color: var(--light-gray)">
           <p>Ties</p>
-          <span>0</span>
+          <span data-id="ties">0</span>
         </div>
         <div class="score shadow" style="background-color: var(--yellow)">
           <p>Player 2</p>
-          <span>0 Wins</span>
+          <span data-id="p2-wins">0 Wins</span>
         </div>
       </div>
     </main>
